fix(game): remove hard-setted width and gaps to fix sizing on mobile

--- a/src/components/app/index.css
+++ b/src/components/app/index.css
@@ -1,6 +1,6 @@
 .main {
-	width: 460px;
-	margin: 10px auto;
+	/* width: 460px;
+	margin: 10px auto; */
 	text-align: center;
 	color: var(--color);
 	background: var(--bg-color);
